--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -4,3 +4,9 @@ server:
 spring:
   profiles:
     active: local
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: env,health,info
