--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -6,14 +6,17 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    depends_on:
+      - bookamore-db
     ports:
       - "8080:8080"
     environment:
-      - SPRING_PROFILES_ACTIVE=dev
-      - SPRING_DEVTOOLS_RESTART_ENABLED=true
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://bookamore-db:5432/bookamore-db
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=postgres
     volumes:
-      - ../backend:/app
-      - ~/.m2:/root/.m2  # Кэш Maven для ускорения сборки
+      - ../backend:/usr/bookamore-backend
+      - ~/.m2:/root/.m2
     networks:
       - app-network
     healthcheck:
@@ -22,18 +25,27 @@ services:
       timeout: 10s
       retries: 3
 
+  bookamore-db:
+    image: postgres
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=bookamore-db
+    networks:
+      - app-network
+
   frontend:
     tty: true
     build:
-      context: ./frontend
+      context: frontend
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
     environment:
       - CHOKIDAR_USEPOLLING=true  # Для корректной работы hot reload в Docker
-    volumes:
-      - ../frontend:/app
-      - /app/node_modules  # Исключаем node_modules из монтирования
+    #volumes:
+    #  - ../frontend:/app 
+    #  - /app/node_modules  # Исключаем node_modules из монтирования
     depends_on:
       - backend
     networks:
