--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -4,3 +4,9 @@ server:
 spring:
   profiles:
     active: local
+
+  springdoc:
+    swagger-ui:
+      enabled: true
+      path: /swagger-ui.html
+    api-docs.path: /api-docs
