--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,24 +13,13 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>backend</name>
     <description>backend for booksy</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+
     <properties>
         <java.version>17</java.version>
         <org.mapstruct.version>1.6.0.Beta1</org.mapstruct.version>
-        <springdoc-openapi.version>2.0.3</springdoc-openapi.version>
+        <springdoc-openapi.version>2.7.0</springdoc-openapi.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -40,17 +29,20 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
-        <!--		<dependency>-->
-        <!--			<groupId>org.springframework.boot</groupId>-->
-        <!--			<artifactId>spring-boot-starter-security</artifactId>-->
-        <!--		</dependency>-->
-
-        <!--		<dependency>-->
-        <!--			<groupId>org.springframework.security</groupId>-->
-        <!--			<artifactId>spring-security-test</artifactId>-->
-        <!--			<scope>test</scope>-->
-        <!--		</dependency>-->
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${springdoc-openapi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
@@ -75,64 +67,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>${springdoc-openapi.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-crypto</artifactId>
-            <version>6.5.1</version>
-        </dependency>
-        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${org.mapstruct.version}</version>
         </dependency>
     </dependencies>
-
-    <!--	<build>-->
-    <!--		<plugins>-->
-    <!--			<plugin>-->
-    <!--				<groupId>org.apache.maven.plugins</groupId>-->
-    <!--				<artifactId>maven-compiler-plugin</artifactId>-->
-    <!--				<configuration>-->
-    <!--					<annotationProcessorPaths>-->
-    <!--						<path>-->
-    <!--							<groupId>org.projectlombok</groupId>-->
-    <!--							<artifactId>lombok</artifactId>-->
-    <!--						</path>-->
-    <!--					</annotationProcessorPaths>-->
-    <!--				</configuration>-->
-    <!--			</plugin>-->
-    <!--			<plugin>-->
-    <!--				<groupId>org.springframework.boot</groupId>-->
-    <!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
-    <!--				<configuration>-->
-    <!--					<excludes>-->
-    <!--						<exclude>-->
-    <!--							<groupId>org.projectlombok</groupId>-->
-    <!--							<artifactId>lombok</artifactId>-->
-    <!--						</exclude>-->
-    <!--					</excludes>-->
-    <!--				</configuration>-->
-    <!--			</plugin>-->
-    <!--			<plugin>-->
-    <!--				<groupId>org.apache.maven.plugins</groupId>-->
-    <!--				<artifactId>maven-compiler-plugin</artifactId>-->
-    <!--				<version>3.11.0</version>-->
-    <!--				<configuration>-->
-    <!--					<annotationProcessorPaths>-->
-    <!--						<path>-->
-    <!--							<groupId>org.mapstruct</groupId>-->
-    <!--							<artifactId>mapstruct-processor</artifactId>-->
-    <!--							<version>1.6.0.Beta1</version>-->
-    <!--						</path>-->
-    <!--					</annotationProcessorPaths>-->
-    <!--				</configuration>-->
-    <!--			</plugin>-->
-    <!--		</plugins>-->
-    <!--	</build>-->
 
     <build>
         <plugins>
