--- a/frontend/Dockerfile-dev
+++ b/frontend/Dockerfile-dev
@@ -2,11 +2,4 @@ FROM node:22.17.0-alpine
 
 WORKDIR /usr/app
 
-COPY package.json ./
-COPY package-lock.json ./
-
-RUN npm install
-
-COPY ./ ./
-
-ENTRYPOINT ["npm", "run", "dev"]
+ENTRYPOINT npm install && npm run dev
