--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,8 +16,8 @@
 
     <properties>
         <java.version>17</java.version>
-        <org.mapstruct.version>1.6.0.Beta1</org.mapstruct.version>
-        <springdoc-openapi.version>2.7.0</springdoc-openapi.version>
+        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+        <springdoc-openapi.version>2.8.9</springdoc-openapi.version>
     </properties>
 
     <dependencies>
@@ -85,6 +85,11 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
             <version>0.12.3</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.0.0</version>
         </dependency>
     </dependencies>
 
