--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -1,4 +1,16 @@
 services:
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - backend
+      - frontend
+    networks:
+      - app-network
+    restart: unless-stopped
   backend:
     tty: true
     build:
@@ -6,8 +18,8 @@ services:
       dockerfile: Dockerfile-dev
     depends_on:
       - bookamore-db
-    ports:
-      - "8080:8080"
+    expose:
+      - "8080"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://bookamore-db:5432/bookamore-db
       - SPRING_DATASOURCE_USERNAME=postgres
@@ -18,7 +30,7 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -33,7 +45,7 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres -d bookamore-db" ]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d bookamore-db"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -44,8 +56,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile-dev
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     environment:
       - CHOKIDAR_USEPOLLING=true
     volumes:
@@ -56,7 +68,7 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:3000" ]
+      test: ["CMD", "curl", "-f", "http://localhost:3000"]
       interval: 30s
       timeout: 10s
       retries: 3
