--- a/nginx-dev.conf
+++ b/nginx-dev.conf
@@ -14,8 +14,8 @@ http {
     server {
         listen 80;
         
-        # API запити йдуть на backend
-        location /api/v1/ {
+        # API запити + Swagger UI йдуть на backend
+        location ~ ^/(api/v1/|swagger-ui/|v3/api-docs) {
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
