--- a/frontend/Dockerfile-dev
+++ b/frontend/Dockerfile-dev
@@ -2,4 +2,17 @@ FROM node:22.17.0-alpine
 
 WORKDIR /usr/app
 
-ENTRYPOINT npm install && npm run dev
+# Копіюємо package files для кешування залежностей
+COPY package*.json ./
+
+# Встановлюємо залежності
+RUN npm install
+
+# Копіюємо весь проект
+COPY . .
+
+# Відкриваємо порт для Vite dev server
+EXPOSE 3000
+
+# Запускаємо dev server з правильним host для Docker
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
