--- a/nginx-local.conf
+++ b/nginx-local.conf
@@ -13,6 +13,16 @@ http {
 
     server {
         listen 80;
+
+        location /img/ {
+            alias /usr/share/nginx/html/uploads/;  # uploads volume
+            autoindex off;  # disable the directory listing output
+            include /etc/nginx/mime.types;  # MIME Types
+            default_type application/octet-stream;  # Define default type
+            add_header Cache-Control "public";  #  Permit browsers and proxies to cache this resource
+            expires 1h;  # 'Cache-Control: max-age={value_in_seconds}' & 'Expires={datetime_value}' headers
+            access_log off;  # Disable logging for this location
+        }
         
         # API запити + Swagger UI йдуть на backend
         location ~ ^/(api/v1/|swagger-ui/|v3/api-docs) {
