TFB-007 - implemented offer preview image controller

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -57,3 +57,6 @@ logs/               # Dedicated directory for application logs
 
 # ENVIROMENT
 /src/main/resources/.env
+
+# UPLOAD DIRECTORY
+/src/main/resources/uploads/
