--- a/nginx-local.conf
+++ b/nginx-local.conf
@@ -14,6 +14,8 @@ http {
     server {
         listen 80;
 
+        client_max_body_size 21M; # allows uploading up to 4 images (~5 MB each)
+
         location /img/ {
             alias /usr/share/nginx/html/uploads/;  # uploads volume
             autoindex off;  # disable the directory listing output
