--- a/docker-compose-local.yaml
+++ b/docker-compose-local.yaml
@@ -58,8 +58,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile-local
-    expose:
-      - "3000"
+    ports:
+      - "3000:3000"
     environment:
       - CHOKIDAR_USEPOLLING=true
     volumes:
