--- a/frontend/Dockerfile-local
+++ b/frontend/Dockerfile-local
@@ -2,17 +2,17 @@ FROM node:22.17.0-alpine
 
 WORKDIR /usr/app
 
-# # Копіюємо package files для кешування залежностей
-# COPY package*.json ./
+# Копіюємо package files для кешування залежностей
+COPY package*.json ./
 
-# # Встановлюємо залежності
-# RUN npm install
+# Встановлюємо залежності
+RUN npm install
 
-# # Копіюємо весь проект
-# COPY . .
+# Копіюємо весь проект
+COPY . .
 
-# # Відкриваємо порт для Vite dev server
-# # EXPOSE 3000
+# Відкриваємо порт для Vite dev server
+# EXPOSE 3000
 
-# # Запускаємо dev server з правильним host для Docker
-# CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+# Запускаємо dev server з правильним host для Docker
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
