--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -52,6 +52,7 @@ services:
       - "3000"
     environment:
       - CHOKIDAR_USEPOLLING=true
+    command: sh -c "npm install && npm run dev"
     volumes:
       - ./frontend:/usr/app
       - /app/node_modules
