--- a/backend/Dockerfile-prod
+++ b/backend/Dockerfile-prod
@@ -1,11 +1,18 @@
-FROM maven:3.8.6-openjdk-18
-
-WORKDIR /app
+# ---------- BUILD STAGE ----------
+FROM maven:3.9-eclipse-temurin-21 AS build
+WORKDIR /build
 
 COPY pom.xml .
+RUN mvn -B dependency:go-offline
 
-RUN mvn dependency:go-offline -B
+COPY src ./src
+RUN mvn -B package -DskipTests
 
-COPY src src
+# ---------- RUNTIME STAGE ----------
+FROM eclipse-temurin:21-jre
+WORKDIR /app
 
-ENTRYPOINT ["mvn", "spring-boot:run", "-Dspring-boot.run.profiles=local"]
+COPY --from=build /build/target/*.jar app.jar
+
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "app.jar"]
