--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -4,8 +4,8 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx-local.conf:/etc/nginx/nginx.conf
-      - ./backend/src/main/resources/uploads:/usr/share/nginx/html/uploads:ro
+      - ./nginx-prod.conf:/etc/nginx/nginx.conf:ro
+      - uploads:/usr/share/nginx/html/uploads:ro
     depends_on:
       - backend
       - frontend
@@ -25,19 +25,22 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://bookamore-db:5432/bookamore-db
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
+      APP_UPLOAD_DIR: /app/uploads
+    volumes:
+      - uploads:/app/uploads
     networks:
       - app-network
 
   bookamore-db:
-    image: postgres
+    image: postgres:16
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=bookamore-db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: bookamore-db
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     networks:
       - app-network
-    expose:
-      - "5432"
 
   frontend:
     tty: true
@@ -56,6 +59,10 @@ services:
       - backend
     networks:
       - app-network
+
+volumes:
+  uploads:
+  pgdata:
 
 networks:
   app-network:
