TFB-104. Make backend docker more production frendly

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -13,7 +13,7 @@ management:
 
 file:
   hash-algorithm: SHA-256
-  upload-dir: ./src/main/resources/uploads
+  upload-dir: /app/uploads
   # Octal POSIX permissions for upload subdirectories
   sub-dirs-perms: 775
   sub-dirs:
