--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -8,7 +8,6 @@ services:
       - uploads:/usr/share/nginx/html/uploads:ro
     depends_on:
       - backend
-      - frontend
     networks:
       - app-network
     restart: unless-stopped
@@ -30,6 +29,7 @@ services:
       - uploads:/app/uploads
     networks:
       - app-network
+    restart: unless-stopped
 
   bookamore-db:
     image: postgres:16
@@ -41,24 +41,15 @@ services:
       - pgdata:/var/lib/postgresql/data
     networks:
       - app-network
+    restart: unless-stopped
 
   frontend:
-    tty: true
     build:
       context: ./frontend
       dockerfile: Dockerfile-prod
-    expose:
-      - "3000"
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    command: sh -c "npm install && npm run dev"
-    volumes:
-      - ./frontend:/usr/app
-      - /app/node_modules
-    depends_on:
-      - backend
     networks:
       - app-network
+    restart: unless-stopped
 
 volumes:
   uploads:
