--- a/frontend/Dockerfile-prod
+++ b/frontend/Dockerfile-prod
@@ -1,18 +1,27 @@
-FROM node:22.17.0-alpine
+# ---------- Build stage ----------
+FROM node:22.17.0-alpine AS build
 
-WORKDIR /usr/app
+WORKDIR /app
 
-# Копіюємо package files для кешування залежностей
-#COPY package*.json ./
-#
-## Встановлюємо залежності
-#RUN npm install
-#
-## Копіюємо весь проект
-#COPY . .
-#
-## Відкриваємо порт для Vite dev server
-## EXPOSE 3000
-#
-## Запускаємо dev server з правильним host для Docker
-#CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+COPY package*.json ./
+RUN npm ci
+
+COPY . .
+RUN npm run build
+
+# ---------- Runtime stage ----------
+FROM nginx:alpine
+
+# Remove default nginx config
+RUN rm /etc/nginx/conf.d/default.conf
+
+# Copy production nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy React build output
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# Expose port
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
