--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -1,52 +1,28 @@
-events {
-    worker_connections 1024;
-}
+server {
+    listen 80;
+    client_max_body_size 21M;
 
-http {
-    upstream backend {
-        server backend:8080;
+    # Uploads
+    location /img/ {
+        alias /usr/share/nginx/html/uploads/;
+        access_log off;
+        expires 1h;
+        add_header Cache-Control "public";
     }
 
-    upstream frontend {
-        server frontend:3000;
+    # API
+    location ~ ^/(api/v1/|swagger-ui/|v3/api-docs) {
+        proxy_pass http://backend:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    server {
-        listen 80;
-
-        client_max_body_size 21M; # allows uploading up to 4 images (~5 MB each)
-
-        location /img/ {
-            alias /usr/share/nginx/html/uploads/;  # uploads volume
-            autoindex off;  # disable the directory listing output
-            include /etc/nginx/mime.types;  # MIME Types
-            default_type application/octet-stream;  # Define default type
-            add_header Cache-Control "public";  #  Permit browsers and proxies to cache this resource
-            expires 1h;  # 'Cache-Control: max-age={value_in_seconds}' & 'Expires={datetime_value}' headers
-            access_log off;  # Disable logging for this location
-        }
-        
-        # API запити + Swagger UI йдуть на backend
-        location ~ ^/(api/v1/|swagger-ui/|v3/api-docs) {
-            proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Всі інші запити йдуть на frontend
-        location / {
-            proxy_pass http://frontend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # WebSocket support для Vite HMR
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
+    # React SPA
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri /index.html;
     }
 }
