--- a/frontend/Dockerfile-prod
+++ b/frontend/Dockerfile-prod
@@ -16,7 +16,7 @@ FROM nginx:alpine
 RUN rm /etc/nginx/conf.d/default.conf
 
 # Copy production nginx config
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx-prod.conf /etc/nginx/conf.d/default.conf
 
 # Copy React build output
 COPY --from=build /app/dist /usr/share/nginx/html
