--- a/nginx-local.conf
+++ b/nginx-local.conf
@@ -35,6 +35,15 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # OAuth2 endpoints - make redirect on backend
+        location ~ ^/(login/)?oauth2/ {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Всі інші запити йдуть на frontend
         location / {
             proxy_pass http://frontend;
